2010-09-09       Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/m2-3.bnf:  improved Qualident to include much stricter
	  checking of imported idents.
	* gm2/bnf/m2.bnf:  place imported modules into a separate list
	  in definition modules.
	* gm2/gm2-compiler/P1SymBuild.def:  introduce parameter to
	  BuildImportOuterModule to indicate whether a definition
	  module is being compiled.
	* gm2/gm2-compiler/P1SymBuild.mod:  implement above.
	* gm2/gm2-compiler/P3SymBuild.mod:  modified
	  CheckImportListOuterModule to include a check for
	  ImplicitlyExported symbols.
	* gm2/gm2-compiler/SymbolTable.def:  (New procedures)
	  PutIncludedByDefinition and IsIncludedByDefinition.
	* gm2/gm2-compiler/SymbolTable.mod:  (New procedures
	  implemented) PutIncludedByDefinition and IsIncludedByDefinition.

2010-09-08       Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/m2-3.bnf:  strict checking has been inforced on
	  imported symbols both on FROM x IMPORT y and also on
	  Qualidents.  Separated Import into FromImport and
	  WithoutFromImport and use appropriate productions.
	* gm2/gm2-compiler/P3SymBuild.def:  (New procedures)
          CheckCanBeImported, CheckImportListOuterModule.
	* gm2/gm2-compiler/P3SymBuild.def:  (New procedures)
	  implemented CheckCanBeImported, CheckImportListOuterModule.
	* gm2/gm2-compiler/SymbolTable.def:  (New procedure)
          IsImplicityExported.
	* gm2/gm2-compiler/SymbolTable.mod:  (New procedure)
          implemented IsImplicityExported.
	
2010-09-06       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2ALU.mod:  (New procedure) IsSolvedGCC.
	  Used instead of IsValueSolved.  This fixes a bug reported by
	  DragiÅ¡a DuriÄ (dragisa-duric/testcase12/pass/testcase12b.mod).
	* gm2/gm2-compiler/M2GenGCC.mod:  skip the type of a
	  procedure variable.
	* gm2/gm2-compiler/M2Quads.mod:  skip the type of a
	  procedure variable held in OperandF.  Ensure that
	  assignment compatibility is only checked for procedure